# sitesnapbyecm

./: .env.example  .gitignore  Dockerfile  README.md  airtable-helpers.js  cloudflare-deploy.js  email-template.html  n8n-workflow.json  parse-claude-output.js  pyproject.toml  render.yaml  setup-guide.md
app/: db.py  main.py  models.py  palettes.py  settings.py  slugs.py
app/api/: admin.py  health.py  sites.py  status.py
app/integrations/: anthropic_client.py  r2_client.py  resend_client.py  unsplash_client.py
app/pipeline/: classify.py  copy.py  images.py  notify.py  orchestrator.py  publish.py  render.py
docs/superpowers/plans/: 2026-05-23-sitesnap-mvp-backend.md
infra/worker/: README.md  wrangler.toml
infra/worker/src/: index.ts
migrations/: 0001_init.sql  0002_unsplash_cache.sql
prompts/: archetype_hospitality.md  archetype_portfolio.md  archetype_service.md  system_classifier.md  system_copywriter.md
scripts/: live_smoke.ps1
templates/: status.html.j2
templates/hospitality/: index.html.j2  manifest.json
templates/portfolio/: index.html.j2  manifest.json
templates/service/: index.html.j2  manifest.json
tests/: conftest.py
tests/api/: test_admin.py  test_health.py  test_sites.py  test_status.py
tests/integrations/: test_anthropic_client.py  test_db.py  test_r2_client.py  test_resend_client.py  test_unsplash_client.py
tests/pipeline/: test_classify.py  test_copy.py  test_images.py  test_notify.py  test_orchestrator.py  test_publish.py  test_render.py
tests/unit/: test_models.py  test_palettes.py  test_settings.py  test_slugs.py
(+2 files in other folders)
