[project]
name = "sitesnap-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "anthropic>=0.40",
  "resend>=2.4",
  "aioboto3>=13.2",
  "pillow>=11",
  "jinja2>=3.1",
  "asyncpg>=0.30",
  "loguru>=0.7",
  "python-slugify>=8.0",
  "nanoid>=2.0",
  "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
  "pytest-postgresql>=6.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
